feat: allow reusing an adapter layer
